--- a/MapKitAndUserLocation/AnnotationsScreen/AnnotationTableViewCell.xib
+++ b/MapKitAndUserLocation/AnnotationsScreen/AnnotationTableViewCell.xib
@@ -9,21 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="AnnotationTableViewCell" customModule="MapKitAndUserLocation" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="AnnotationCell" rowHeight="90" id="KGk-i7-Jjw" customClass="AnnotationTableViewCell" customModule="MapKitAndUserLocation" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="294.5" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Primary Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2C-vF-Vpj">
-                        <rect key="frame" x="16" y="18" width="262.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Primary Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2C-vF-Vpj">
+                        <rect key="frame" x="16" y="15" width="262.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Secondary Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="geo-HY-YHc">
-                        <rect key="frame" x="16" y="44" width="262.5" height="17"/>
+                        <rect key="frame" x="16" y="41" width="262.5" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -31,14 +31,19 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="B2C-vF-Vpj" secondAttribute="trailing" constant="16" id="1Gx-fA-AzO"/>
+                    <constraint firstAttribute="bottom" secondItem="geo-HY-YHc" secondAttribute="bottom" constant="15" id="AkP-co-UUW"/>
                     <constraint firstItem="geo-HY-YHc" firstAttribute="top" secondItem="B2C-vF-Vpj" secondAttribute="bottom" constant="5" id="M7o-K7-yvJ"/>
                     <constraint firstItem="geo-HY-YHc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="REf-hS-Zbk"/>
-                    <constraint firstItem="B2C-vF-Vpj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="ZaQ-pN-0xf"/>
+                    <constraint firstItem="B2C-vF-Vpj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="ZaQ-pN-0xf"/>
                     <constraint firstItem="B2C-vF-Vpj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="iTW-MF-TgH"/>
                     <constraint firstAttribute="trailing" secondItem="geo-HY-YHc" secondAttribute="trailing" constant="16" id="k9T-3N-tQa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="primaryLabel" destination="B2C-vF-Vpj" id="gN5-sT-mDJ"/>
+                <outlet property="secondaryLabel" destination="geo-HY-YHc" id="T0s-A3-AAr"/>
+            </connections>
             <point key="canvasLocation" x="131.8840579710145" y="131.91964285714286"/>
         </tableViewCell>
     </objects>
